[package]
name = "relate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.23.1"
byteorder = "1.4.3"
clap = { version = "4.0.32", features = ["derive"] }
cxx = { version = "1.0.85", features = ["c++17"] }
libc = "0.2.139"
miette = { version = "5", features = ["fancy"] }

[build-dependencies]
autocxx-build = "0.23.1"
meson = "1.0.0"
miette = { version = "5", features = ["fancy"] }
