[package]
name = "relate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.24.0"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
cxx = { version = "1.0.89", features = ["c++17"] }
libc = "0.2.139"
miette = { version = "5", features = ["fancy"] }
rand = "0.8.5"

[build-dependencies]
autocxx-build = "0.24.0"
meson = "1.0.0"
miette = { version = "5", features = ["fancy"] }
