subdir('gzstream')
relate = declare_dependency(
  sources : [
    'fast_painting.cpp',
    'anc.cpp',
    'anc_builder.cpp',
    'branch_length_estimator.cpp',
    'tree_builder.cpp',
    'data.cpp',
    'filesystem.cpp',
    'mutations.cpp',
    'plot.cpp',
    'sample.cpp',
    'tree_comparer.cpp',
  ],
  dependencies : gzstream,
  include_directories : include_directories('.'))